--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "resultjs",
+  "name": "rustflow",
   "version": "1.0.0",
-  "description": "",
+  "description": "Error and optional values control flow library based on Rust's Result and Option.",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
   "files": [
