--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Error and optional values control flow library based on Rust's Result and Option.",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+  "homepage": "https://github.com/AnderBenito/RustFlow",
+  "repository": "git@github.com:AnderBenito/RustFlow.git",
+  "bugs": {
+    "url": "https://github.com/AnderBenito/RustFlow/issues",
+    "email": "anderbenito96@gmail.com"
+  },
   "files": [
 		"/dist"
 	],
@@ -25,6 +31,6 @@
     "ts-jest": "^28.0.8"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Ander Benito <anderbenito96@gmail.com>",
+  "license": "MIT"
 }
