Add strictNullChecks and isDefined function uses Optional<T>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "declaration": true,
         "noImplicitAny": false,
+        "strictNullChecks": true,
         "baseUrl": "./",
         "outDir": "./dist",
         "removeComments": true,
